--- a/wiki/WebKitProtocol.wiki
+++ b/wiki/WebKitProtocol.wiki
@@ -2,6 +2,32 @@
 
 = !WebKit Remote Debugging Protocol =
 
+==Introduction==
+This is the main Google Chrome/Chromium debug protocol and historically it succeeds ChromeDevToolsProtocol. It is natively used by in-browser Developer Tools.
+
+=== How to start Google Chrome/Chromium ===
+{{{
+chrome --remote-debugging-port=<port>
+}}}
+
+=== How to attach from [EclipseDebugger Debugger] ===
+A launch configuration named "!WebKit Protocol" should be created (see [DebuggerTutorial#Connect tutorial]).
+
+=== How to attach from SDK ===
+Use the following create method:
+{{{
+org.chromium.sdk.wip.WipBrowserFactory.INSTANCE.createBrowser(...)
+}}}
+
+== WIP Backends ==
+Note that the project contains several alternative protocol implementations for the different versions. They are deployed as "WIP Backends" (see [WipBackends main article]).
+
+=== Protocol Name ===
+Protocol is called '!WebKit Remote Debuggin Protocol'. You can be sure that you are using this protocol, if you are starting Google Chrome/Chromium with the following parameter:
+{{{--remote-debugging-port=<port>}}}
+
+Compare with [ChromeDevToolsProtocol#Protocol_Name ChromeDevTools Protocol].
+
 See [http://code.google.com/chrome/devtools/docs/remote-debugging].
 
 Blog posts:
