--- a/wiki/WebKitProtocol.wiki
+++ b/wiki/WebKitProtocol.wiki
@@ -1,9 +1,6 @@
 #summary WebKit Remote Debugging Protocol.
-
-= !WebKit Remote Debugging Protocol =
-
 ==Introduction==
-This is a Google Chrome/Chromium debug protocol. You will find its description at [http://developers.google.com/chrome-developer-tools/docs/remote-debugging].
+WebKit Remote Debugging Protocol is a Google Chrome/Chromium debug protocol. You will find its description at [http://developers.google.com/chrome-developer-tools/docs/remote-debugging].
 
 This protocol is natively used by in-browser Developer Tools. Historically it succeeds ChromeDevToolsProtocol.
 
