--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/liveedit/messages.properties
@@ -1,9 +1,12 @@
 PushResultParser_COMPILE_ERROR=Compile error
 PushResultParser_SCRIPT=<script>
 LiveEditDiffViewer_UNNAMED=<unnamed>
+LiveEditResultDialog_COMPILE_ERROR=Compile error: 
 LiveEditResultDialog_CURRENT_SCRIPT=Current script in VM
 LiveEditResultDialog_FAILURE=Failure: {0}
 LiveEditResultDialog_FRAMES_DROPPED=Top frame(s) has been dropped from stack.
+LiveEditResultDialog_LINE_COLUMN=Line: {0}, column: {1}
+LiveEditResultDialog_SELECT_IN_EDITOR=Select in editor
 LiveEditResultDialog_OK=OK
 LiveEditResultDialog_OLD_SCRIPT=Old script in VM ''{0}''
 LiveEditResultDialog_SCRIPT_CREATED=Script that represents old version of source has been created.
