--- a/wiki/ChromeDevToolsProtocol.wiki
+++ b/wiki/ChromeDevToolsProtocol.wiki
@@ -15,7 +15,7 @@ A single subsystem that uses !ChromeDevTools protocol as a transport for its own
 
 === How to start Google Chrome/Chromium ===
 {{{
-chrome --remote-shell-port=<port>
+chrome --remote-debugging-port=<port>
 }}}
 
 === How to attach from [EclipseDebugger Debugger] ===
@@ -28,8 +28,8 @@ org.chromium.sdk.BrowserFactory.getInstance().create(...)
 }}}
 
 === Protocol Name ===
-Protocol is called '!ChromeDevTools Protocol'. The name is pretty overloaded though. You can be sure that you are using this protocol, if you are starting Google Chrome/Chromium with the following parameter:
-{{{--remote-shell-port=<port>}}}
+Protocol is called '!ChromeDevTools Protocol'. The name is pretty overloaded though. You can be sure that you are using this protocol if you are starting Google Chrome/Chromium with the following parameter:
+{{{--remote-debugging-port=<port>}}}
 
 Compare with [WebKitProtocol WebKit Remote Debugging Protocol].
 
